# ai

./: .gitignore  .pre-commit-config.yaml  PUBLISHING.md  README.md
.github/workflows/: lint.yml  pr-check.yml  publish_both_to_pypi.yaml  publish_pypi_thirdweb_ai.yaml  publish_pypi_thirdweb_mcp.yaml  pytest.yml  release.yml  sync_dependencies.yaml
examples/: README.md
examples/python/: README.md  agent_example.py  langchain_example.py  simple_demo.py  thirdweb_ai_summary.py
mcp-server/: package.json  pnpm-lock.yaml  tsconfig.base.json
mcp-server/src/: index.ts  mcp.ts  sse.ts  stdio.ts
openapi/: engine.json  insight.json
python/: pyproject.toml
python/examples/adapter_autogen/: README.md  example.py  pyproject.toml
python/examples/adapter_coinbase_agentkit/: README.md  example.py  pyproject.toml
python/examples/adapter_goat/: README.md  example.py  pyproject.toml
python/examples/adapter_google_adk/: README.md  example.py  pyproject.toml
python/examples/adapter_langchain/: README.md  example.py  pyproject.toml
python/examples/adapter_llama_index/: README.md  example.py  pyproject.toml
python/examples/adapter_mcp/: README.md  example.py  pyproject.toml
python/examples/adapter_openai/: README.md  example.py  pyproject.toml
python/examples/adapter_pydantic_ai/: README.md  example.py  pyproject.toml
python/examples/adapter_smolagents/: README.md  example.py  pyproject.toml
python/thirdweb-ai/: CHANGELOG.md  README.md  TESTING.md  pyproject.toml  pytest.ini
python/thirdweb-ai/newsfragments/: 1.feature.md  README.md
python/thirdweb-ai/src/thirdweb_ai/: CLAUDE.md  __init__.py  _version.py
python/thirdweb-ai/src/thirdweb_ai/adapters/autogen/: __init__.py  autogen.py
python/thirdweb-ai/src/thirdweb_ai/adapters/coinbase_agentkit/: __init__.py  coinbase_agentkit.py
python/thirdweb-ai/src/thirdweb_ai/adapters/goat/: __init__.py  goat.py
python/thirdweb-ai/src/thirdweb_ai/adapters/google_adk/: __init__.py  example.py  google_adk.py
python/thirdweb-ai/src/thirdweb_ai/adapters/langchain/: __init__.py  langchain.py
python/thirdweb-ai/src/thirdweb_ai/adapters/llama_index/: __init__.py  llama_index.py
python/thirdweb-ai/src/thirdweb_ai/adapters/mcp/: __init__.py  mcp.py
python/thirdweb-ai/src/thirdweb_ai/adapters/openai/: __init__.py  agents.py
python/thirdweb-ai/src/thirdweb_ai/adapters/pydantic_ai/: __init__.py  pydantic_ai.py
python/thirdweb-ai/src/thirdweb_ai/adapters/smolagents/: __init__.py  smolagents.py
python/thirdweb-ai/src/thirdweb_ai/common/: address.py  utils.py
python/thirdweb-ai/src/thirdweb_ai/services/: __init__.py  engine.py  engine_cloud.py  insight.py  nebula.py  service.py  storage.py
python/thirdweb-ai/src/thirdweb_ai/tools/: tool.py
python/thirdweb-ai/tests/: README.md  conftest.py  summary.md
python/thirdweb-ai/tests/adapters/: __init__.py  test_autogen.py  test_coinbase_agentkit.py  test_goat.py  test_langchain.py  test_llama_index.py  test_mcp.py  test_openai.py  test_pydantic_ai.py  test_smolagents.py
python/thirdweb-ai/tests/common/: test_utils.py
python/thirdweb-ai/tests/services/: test_engine.py  test_insight.py  test_nebula.py  test_storage.py
python/thirdweb-mcp/: README.md  pyproject.toml
python/thirdweb-mcp/src/: _version.py  mcp.py
python/thirdweb-mcp/src/thirdweb_mcp/: mcp.py
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json
typescript/src/: index.ts  tool.ts  types.ts
typescript/src/adapters/: index.ts  openai.ts
