[project]
name = "thirdweb-mcp"
dynamic = ["version"]
description = "thirdweb MCP"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "mcp>=1.3.0,<2",
    "click>=8.1.8,<9",
    "thirdweb-ai[mcp]==0.1.6",
]

[project.scripts]
thirdweb-mcp = "src.mcp:main"

[dependency-groups]
dev = [
    "ruff>=0.9.10,<0.10",
    "pyright>=1.1.396,<2",
    "python-semantic-release>=8.7.0,<9",
]

[tool.hatch.version]
path = "src/thirdweb_mcp/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["src/mcp.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "uv build"
commit_subject = "chore: release thirdweb-mcp {version}"
commit_message = "Release thirdweb-mcp version {version}"
changelog_sections = [
    {"type" = "feat", "section" = "Features"},
    {"type" = "fix", "section" = "Bug Fixes"},
    {"type" = "perf", "section" = "Performance Improvements"},
    {"type" = "refactor", "section" = "Code Refactoring"},
]
major_on_zero = false
