[project]
name = "thirdweb-mcp"
dynamic = ["version", "dependencies"]
description = "thirdweb MCP"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "Apache-2.0"

[project.scripts]
thirdweb-mcp = "src.mcp:main"

[dependency-groups]
dev = [
    "ruff>=0.9.10,<0.10",
    "pyright>=1.1.396,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
    "mcp>=1.3.0,<2",
    "click>=8.1.8,<9",
    "thirdweb-ai[mcp]=={{ version }}",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
format = "{base}"
dev_mode = "env:THIRDWEB_DEV_MODE"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = "none"
reportAbstractUsage = "none"
reportUnknownMemberType = "none"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "E", "F", "W", "I", "N", "UP", "A", "B", "ASYNC", "C4", "COM", "SIM", 
  "RET", "YTT", "PTH", "INT", "TID", "SLOT", "SLF", "RSE", "Q", "PT", "PYI", "T20", 
  "PIE", "LOG", "ICN", "ISC", "FA", "T10", "DTZ", "EXE", "RUF", "C", "FURB", "PERF",
  "FLY", "PLC", "PLE", "PLW", "PGH", 
]
ignore = [
  "SIM103", "E501", "UP017", "ISC001", "COM812", "PLC0105", "C901"
]
