[project]
name = "thirdweb-ai-examples-autogen"
version = "0.1.0"
description = "Example of using thirdweb_ai with AutoGen"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[autogen]",
    "autogen-agentchat>=0.4.0,<0.5",
    "autogen-ext[openai]>=0.4.0,<0.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
