[tool.poetry]
name = "thirdweb-ai-examples-coinbase-agentkit"
version = "0.1.0"
description = "Example of using thirdweb_ai with Coinbase AgentKit"
authors = ["thirdweb <support@thirdweb.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
thirdweb-ai = { version = "*", extras = ["agentkit"] }
coinbase-agentkit = "^0.1.0"
coinbase-agentkit-langchain = "^0.1.0"
langchain-openai = "^0.3.8"
langgraph = "^0.3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
