[project]
name = "thirdweb-ai-examples-coinbase-agentkit"
version = "0.1.0"
description = "Example of using thirdweb_ai with Coinbase AgentKit"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[agentkit]",
    "coinbase-agentkit>=0.1.0,<0.2",
    "coinbase-agentkit-langchain>=0.1.0,<0.2",
    "langchain-openai>=0.3.8,<0.4",
    "langgraph>=0.3.11,<0.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
