[project]
name = "thirdweb-ai-examples-goat"
version = "0.1.0"
description = "Example of using thirdweb_ai with GOAT SDK"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[goat]",
    "goat-sdk>=0.1.0,<0.2",
    "goat-sdk-adapter-langchain>=0.1.0,<0.2",
    "goat-sdk-wallet-evm>=0.1.1,<0.2",
    "goat-sdk-wallet-web3>=0.1.0,<0.2",
    "web3>=6.20.3",
    "langchain>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "goat-sdk-plugin-erc20>=0.1.1,<0.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
