[tool.poetry]
name = "thirdweb-ai-examples-langchain"
version = "0.1.0"
description = "Example of using thirdweb_ai with LangChain"
authors = ["thirdweb <support@thirdweb.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
thirdweb-ai = {version = "*", extras = ["langchain"]}
langchain = "^0.3.0"
langchain-openai = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 