[project]
name = "thirdweb-ai-examples-langchain"
version = "0.1.0"
description = "Example of using thirdweb_ai with LangChain"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[langchain]",
    "langchain>=0.3.0,<0.4",
    "langchain-openai>=0.3.0,<0.4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
