[project]
name = "thirdweb-ai-examples-llama-index"
version = "0.1.0"
description = "Example of using thirdweb_ai with LlamaIndex"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[llama-index]",
    "llama-index>=0.12.0,<0.13",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
