[project]
name = "thirdweb-ai-examples-mcp"
version = "0.1.0"
description = "Example of using thirdweb_ai with MCP Server"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[mcp]",
    "mcp>=1.0.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
