[tool.poetry]
name = "thirdweb-ai-examples-openai"
version = "0.1.0"
description = "Example of using thirdweb_ai with OpenAI's agents framework"
authors = ["thirdweb <support@thirdweb.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
thirdweb-ai = {version = "*", extras = ["openai"]}
openai-agents = "^0.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 