[project]
name = "thirdweb-ai-examples-openai"
version = "0.1.0"
description = "Example of using thirdweb_ai with OpenAI's agents framework"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[openai]",
    "openai-agents>=0.0.4,<0.0.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
