[project]
name = "thirdweb-ai-examples-pydantic-ai"
version = "0.1.0"
description = "Example of using thirdweb_ai with Pydantic AI"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[pydantic-ai]",
    "pydantic-ai>=0.0.39,<0.0.40",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
