[tool.poetry]
name = "thirdweb-ai-examples-smolagents"
version = "0.1.0"
description = "Example of using thirdweb_ai with SmolAgents"
authors = ["thirdweb <support@thirdweb.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
thirdweb-ai = {version = "*", extras = ["smolagents"]}
smolagents = {extras = ["openai"], version = "^1.11.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 