[project]
name = "thirdweb-ai-examples-smolagents"
version = "0.1.0"
description = "Example of using thirdweb_ai with SmolAgents"
authors = [{ name = "thirdweb", email = "support@thirdweb.com" }]
requires-python = "~=3.10"
dependencies = [
    "thirdweb-ai[smolagents]",
    "smolagents[openai]>=1.11.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
